# AIMv2

./: AGENTS.md  Cargo.toml  README.md
src/: core.rs  history.rs  llm.rs  prompt.rs  skills.rs  theorem_graph.rs  ui.rs
