[package]
name = "aimv2"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "aimv2"
path = "src/core.rs"

[dependencies]
anyhow = "1"
async-openai = { version = "0.33.1", features = ["chat-completion"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "17"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
